--- a/data/gui.glade
+++ b/data/gui.glade
@@ -307,7 +307,7 @@
     <property name="icon_size">1</property>
   </object>
   <object class="GtkWindow" id="main_window">
-    <property name="width_request">470</property>
+    <property name="width_request">550</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="resizable">False</property>
@@ -677,7 +677,7 @@
                             <child>
                               <object class="GtkButton" id="button_connect_RDP">
                                 <property name="label" translatable="yes">_Подключение</property>
-                                <property name="width_request">100</property>
+                                <property name="width_request">130</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
@@ -724,8 +724,9 @@
                       <object class="GtkLabel" id="list_RDP">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">RDP</property>
-                        <property name="width_chars">10</property>
+                        <property name="width_chars">8</property>
                       </object>
                       <packing>
                         <property name="tab_fill">False</property>
@@ -793,7 +794,7 @@
                             <child>
                               <object class="GtkButton" id="button_connect_NX">
                                 <property name="label" translatable="yes">_Подключение</property>
-                                <property name="width_request">100</property>
+                                <property name="width_request">130</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
@@ -843,9 +844,10 @@
                       <object class="GtkLabel" id="list_NX">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">NX</property>
                         <property name="ellipsize">start</property>
-                        <property name="width_chars">10</property>
+                        <property name="width_chars">8</property>
                       </object>
                       <packing>
                         <property name="position">1</property>
@@ -917,7 +919,7 @@
                             <child>
                               <object class="GtkButton" id="button_connect_VNC">
                                 <property name="label" translatable="yes">_Подключение</property>
-                                <property name="width_request">100</property>
+                                <property name="width_request">130</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
@@ -968,8 +970,9 @@
                       <object class="GtkLabel" id="list_VNC">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">VNC</property>
-                        <property name="width_chars">10</property>
+                        <property name="width_chars">8</property>
                       </object>
                       <packing>
                         <property name="position">2</property>
@@ -1038,7 +1041,7 @@
                             <child>
                               <object class="GtkButton" id="button_connect_XDMCP">
                                 <property name="label" translatable="yes">_Подключение</property>
-                                <property name="width_request">100</property>
+                                <property name="width_request">130</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
@@ -1088,8 +1091,9 @@
                       <object class="GtkLabel" id="list_XDMCP">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">XDMCP</property>
-                        <property name="width_chars">10</property>
+                        <property name="width_chars">8</property>
                       </object>
                       <packing>
                         <property name="position">3</property>
@@ -1158,7 +1162,7 @@
                             <child>
                               <object class="GtkButton" id="button_connect_VMWARE">
                                 <property name="label" translatable="yes">_Подключение</property>
-                                <property name="width_request">100</property>
+                                <property name="width_request">130</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
@@ -1208,8 +1212,9 @@
                       <object class="GtkLabel" id="list_VMWARE">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">VMware</property>
-                        <property name="width_chars">10</property>
+                        <property name="width_chars">8</property>
                       </object>
                       <packing>
                         <property name="position">4</property>
@@ -1229,7 +1234,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="margin_bottom">3</property>
-                            <property name="label" translatable="yes">Подключение к серверу, построенному на Citrix</property>
+                            <property name="label" translatable="yes">Подключение к серверу Citrix</property>
                             <attributes>
                               <attribute name="underline" value="True"/>
                             </attributes>
@@ -1241,11 +1246,10 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkBox" id="box12">
+                          <object class="GtkGrid" id="grid1">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="halign">center</property>
-                            <property name="spacing">5</property>
                             <child>
                               <object class="GtkComboBox" id="combo_serv_CITRIX">
                                 <property name="width_request">210</property>
@@ -1270,15 +1274,16 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">True</property>
-                                <property name="position">0</property>
+                                <property name="left_attach">0</property>
+                                <property name="top_attach">0</property>
+                                <property name="width">1</property>
+                                <property name="height">1</property>
                               </packing>
                             </child>
                             <child>
                               <object class="GtkButton" id="button_connect_CITRIX">
                                 <property name="label" translatable="yes">_Подключение</property>
-                                <property name="width_request">100</property>
+                                <property name="width_request">130</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
@@ -1288,43 +1293,32 @@
                                 <signal name="clicked" handler="onButtonConnect" object="entry_serv_CITRIX" swapped="no"/>
                               </object>
                               <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">1</property>
+                                <property name="left_attach">1</property>
+                                <property name="top_attach">0</property>
+                                <property name="width">1</property>
+                                <property name="height">1</property>
                               </packing>
                             </child>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">True</property>
-                            <property name="position">1</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkBox" id="box9">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="spacing">5</property>
                             <child>
                               <object class="GtkEntry" id="entry_CITRIX_name">
-                                <property name="width_request">209</property>
+                                <property name="width_request">210</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="margin_left">28</property>
                                 <property name="placeholder_text" translatable="yes">Пример, MyServer</property>
                                 <signal name="activate" handler="onCitrixSave" object="entry_serv_CITRIX" swapped="no"/>
                                 <signal name="changed" handler="inputName" object="button_CITRIX_save" swapped="no"/>
                               </object>
                               <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">True</property>
-                                <property name="position">1</property>
+                                <property name="left_attach">0</property>
+                                <property name="top_attach">1</property>
+                                <property name="width">1</property>
+                                <property name="height">1</property>
                               </packing>
                             </child>
                             <child>
                               <object class="GtkButton" id="button_CITRIX_save">
                                 <property name="label" translatable="yes">Сохранить</property>
-                                <property name="width_request">101</property>
+                                <property name="width_request">130</property>
                                 <property name="visible">True</property>
                                 <property name="sensitive">False</property>
                                 <property name="can_focus">True</property>
@@ -1332,16 +1326,17 @@
                                 <signal name="clicked" handler="onCitrixSave" object="entry_serv_CITRIX" swapped="no"/>
                               </object>
                               <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">True</property>
-                                <property name="position">2</property>
+                                <property name="left_attach">1</property>
+                                <property name="top_attach">1</property>
+                                <property name="width">1</property>
+                                <property name="height">1</property>
                               </packing>
                             </child>
                           </object>
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
-                            <property name="position">3</property>
+                            <property name="position">1</property>
                           </packing>
                         </child>
                         <child>
@@ -1373,8 +1368,9 @@
                       <object class="GtkLabel" id="list_CITRIX">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">Citrix</property>
-                        <property name="width_chars">10</property>
+                        <property name="width_chars">8</property>
                       </object>
                       <packing>
                         <property name="position">5</property>
@@ -1443,7 +1439,7 @@
                             <child>
                               <object class="GtkButton" id="button_connect_SSH">
                                 <property name="label" translatable="yes">_Подключение</property>
-                                <property name="width_request">100</property>
+                                <property name="width_request">130</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
@@ -1493,8 +1489,9 @@
                       <object class="GtkLabel" id="list_SSH">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">SSH</property>
-                        <property name="width_chars">10</property>
+                        <property name="width_chars">8</property>
                       </object>
                       <packing>
                         <property name="position">6</property>
@@ -1563,7 +1560,7 @@
                             <child>
                               <object class="GtkButton" id="button_connect_SFTP">
                                 <property name="label" translatable="yes">_Подключение</property>
-                                <property name="width_request">100</property>
+                                <property name="width_request">130</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
@@ -1613,8 +1610,9 @@
                       <object class="GtkLabel" id="list_SFTP">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">SFTP</property>
-                        <property name="width_chars">10</property>
+                        <property name="width_chars">8</property>
                       </object>
                       <packing>
                         <property name="position">7</property>
@@ -1634,7 +1632,7 @@
               <object class="GtkLabel" id="label1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Connect</property>
+                <property name="label" translatable="yes"> Подключения </property>
               </object>
               <packing>
                 <property name="tab_fill">False</property>
@@ -1766,7 +1764,7 @@
               <object class="GtkLabel" id="label2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Список подключений</property>
+                <property name="label" translatable="yes"> Список подключений </property>
               </object>
               <packing>
                 <property name="position">1</property>
