--- a/data/properties.glade
+++ b/data/properties.glade
@@ -187,7 +187,7 @@
             </child>
             <child>
               <object class="GtkRadioButton" id="radio_VNC_viewer">
-                <property name="label" translatable="yes">vncviewer - VNC viewer</property>
+                <property name="label" translatable="yes">vncviewer - Real VNC</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
@@ -233,7 +233,7 @@
       <object class="GtkBox" id="box6">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="halign">start</property>
+        <property name="halign">end</property>
         <property name="margin_left">60</property>
         <child>
           <object class="GtkLabel" id="label4">
@@ -275,7 +275,7 @@
       <object class="GtkBox" id="box7">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="halign">start</property>
+        <property name="halign">end</property>
         <property name="hexpand">False</property>
         <child>
           <object class="GtkLabel" id="label5">
@@ -330,7 +330,7 @@
       <object class="GtkBox" id="box5">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="halign">center</property>
+        <property name="halign">end</property>
         <property name="homogeneous">True</property>
         <child>
           <object class="GtkButton" id="button_save">
