Added ability to copy connection

--- a/data/gui.glade
+++ b/data/gui.glade
@@ -83,6 +83,16 @@
       </object>
     </child>
     <child>
+      <object class="GtkImageMenuItem" id="menu_popup_copy">
+        <property name="label">gtk-copy</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">True</property>
+        <signal name="activate" handler="onPopupCopy" object="treeview_connections" swapped="no"/>
+      </object>
+    </child>
+    <child>
       <object class="GtkImageMenuItem" id="menu_popup_edit">
         <property name="label">gtk-edit</property>
         <property name="visible">True</property>
