--- a/data/pref_gui.glade
+++ b/data/pref_gui.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkAdjustment" id="adjustment1">
@@ -1841,6 +1841,23 @@
                       </packing>
                     </child>
                     <child>
+                      <object class="GtkRadioButton" id="radio_RDP1_workarea">
+                        <property name="label" translatable="yes">Рабочая область экрана</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="xalign">0</property>
+                        <property name="draw_indicator">True</property>
+                        <property name="group">radio_RDP1_resol_default</property>
+                        <signal name="toggled" handler="offResolutionSet" object="entry_RDP1_resolution" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                    <child>
                       <object class="GtkBox" id="box70">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -1879,7 +1896,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">True</property>
-                        <property name="position">2</property>
+                        <property name="position">3</property>
                       </packing>
                     </child>
                   </object>
@@ -1967,6 +1984,22 @@
               </packing>
             </child>
             <child>
+              <object class="GtkCheckButton" id="check_RDP1_usb">
+                <property name="label" translatable="yes">USB Storage</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="halign">start</property>
+                <property name="xalign">0</property>
+                <property name="draw_indicator">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">9</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkCheckButton" id="check_RDP1_printers">
                 <property name="label" translatable="yes">Принтеры</property>
                 <property name="visible">True</property>
@@ -1979,7 +2012,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">9</property>
+                <property name="position">10</property>
               </packing>
             </child>
             <child>
@@ -1995,7 +2028,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">10</property>
+                <property name="position">11</property>
               </packing>
             </child>
           </object>
@@ -2292,6 +2325,23 @@
                 <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="position">10</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkCheckButton" id="check_RDP1_nla">
+                <property name="label" translatable="yes">Отключить проверку на уровне сети (NLA)</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="halign">start</property>
+                <property name="xalign">0</property>
+                <property name="active">True</property>
+                <property name="draw_indicator">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">12</property>
               </packing>
             </child>
           </object>
