--- a/data/gui.glade
+++ b/data/gui.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkImage" id="CITRIX_image">
@@ -87,6 +87,7 @@
         <property name="label">gtk-copy</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="tooltip_text" translatable="yes">Копировать параметры в новое подключение</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
         <signal name="activate" handler="onPopupCopy" object="treeview_connections" swapped="no"/>
@@ -658,6 +659,7 @@
                 </child>
                 <child>
                   <object class="GtkNotebook" id="list_connect">
+                    <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="margin_left">5</property>
                     <property name="margin_right">5</property>
@@ -672,13 +674,40 @@
                         <property name="valign">center</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="GtkLabel" id="label_RDP">
+                          <object class="GtkBox" id="box_labels_RDP">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Удаленный рабочий стол Windows</property>
-                            <attributes>
-                              <attribute name="underline" value="True"/>
-                            </attributes>
+                            <property name="halign">center</property>
+                            <property name="spacing">3</property>
+                            <child>
+                              <object class="GtkLabel" id="label_RDP">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="label" translatable="yes">Удаленный рабочий стол Windows</property>
+                                <attributes>
+                                  <attribute name="underline" value="True"/>
+                                </attributes>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="label_default_RDP">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <attributes>
+                                  <attribute name="foreground" value="#88878a898585"/>
+                                </attributes>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -773,7 +802,6 @@
                       <object class="GtkLabel" id="list_RDP">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">RDP</property>
                         <property name="width_chars">8</property>
                       </object>
@@ -893,7 +921,6 @@
                       <object class="GtkLabel" id="list_NX">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">NX</property>
                         <property name="ellipsize">start</property>
                         <property name="width_chars">8</property>
@@ -911,13 +938,40 @@
                         <property name="valign">center</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="GtkLabel" id="label_VNC">
+                          <object class="GtkBox" id="box_labels_VNC">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Подключение к рабочему столу ПК</property>
-                            <attributes>
-                              <attribute name="underline" value="True"/>
-                            </attributes>
+                            <property name="halign">center</property>
+                            <property name="spacing">3</property>
+                            <child>
+                              <object class="GtkLabel" id="label_VNC">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="label" translatable="yes">Подключение к рабочему столу ПК</property>
+                                <attributes>
+                                  <attribute name="underline" value="True"/>
+                                </attributes>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="label_default_VNC">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <attributes>
+                                  <attribute name="foreground" value="#88878a898585"/>
+                                </attributes>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -1019,7 +1073,6 @@
                       <object class="GtkLabel" id="list_VNC">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">VNC</property>
                         <property name="width_chars">8</property>
                       </object>
@@ -1140,7 +1193,6 @@
                       <object class="GtkLabel" id="list_XDMCP">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">XDMCP</property>
                         <property name="width_chars">8</property>
                       </object>
@@ -1261,7 +1313,6 @@
                       <object class="GtkLabel" id="list_VMWARE">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">VMware</property>
                         <property name="width_chars">8</property>
                       </object>
@@ -1325,8 +1376,6 @@
                               <packing>
                                 <property name="left_attach">0</property>
                                 <property name="top_attach">0</property>
-                                <property name="width">1</property>
-                                <property name="height">1</property>
                               </packing>
                             </child>
                             <child>
@@ -1344,8 +1393,6 @@
                               <packing>
                                 <property name="left_attach">1</property>
                                 <property name="top_attach">0</property>
-                                <property name="width">1</property>
-                                <property name="height">1</property>
                               </packing>
                             </child>
                             <child>
@@ -1360,8 +1407,6 @@
                               <packing>
                                 <property name="left_attach">0</property>
                                 <property name="top_attach">1</property>
-                                <property name="width">1</property>
-                                <property name="height">1</property>
                               </packing>
                             </child>
                             <child>
@@ -1377,8 +1422,6 @@
                               <packing>
                                 <property name="left_attach">1</property>
                                 <property name="top_attach">1</property>
-                                <property name="width">1</property>
-                                <property name="height">1</property>
                               </packing>
                             </child>
                           </object>
@@ -1417,7 +1460,6 @@
                       <object class="GtkLabel" id="list_CITRIX">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">Citrix</property>
                         <property name="width_chars">8</property>
                       </object>
@@ -1538,7 +1580,6 @@
                       <object class="GtkLabel" id="list_SSH">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">SSH</property>
                         <property name="width_chars">8</property>
                       </object>
@@ -1659,7 +1700,6 @@
                       <object class="GtkLabel" id="list_SFTP">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">SFTP</property>
                         <property name="width_chars">8</property>
                       </object>
@@ -1789,7 +1829,6 @@
                       <object class="GtkLabel" id="label_WEB">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="xalign">0</property>
                         <property name="label" translatable="yes">WEB</property>
                         <property name="width_chars">8</property>
                       </object>
